create table users (
    id bigint generated by default as identity primary key,
    auth_provider_id varchar(120) not null,
    username varchar(40) not null,
    email varchar(160) not null,
    profile_pic_url varchar(500),
    created_at timestamp with time zone not null,
    updated_at timestamp with time zone not null,
    constraint uk_users_auth_provider_id unique (auth_provider_id),
    constraint uk_users_username unique (username),
    constraint uk_users_email unique (email)
);

create table poop_sessions (
    id bigint generated by default as identity primary key,
    client_id uuid not null,
    user_id bigint not null,
    start_time timestamp with time zone not null,
    end_time timestamp with time zone not null,
    duration_seconds bigint not null,
    mood varchar(20) not null,
    comfort_level varchar(20) not null,
    privacy varchar(20) not null,
    note varchar(1000),
    synced_from_offline boolean not null,
    created_at timestamp with time zone not null,
    updated_at timestamp with time zone not null,
    constraint uk_poop_sessions_client_id unique (client_id),
    constraint fk_poop_sessions_user foreign key (user_id) references users (id)
);

create table session_comments (
    id bigint generated by default as identity primary key,
    session_id bigint not null,
    user_id bigint not null,
    body varchar(500) not null,
    created_at timestamp with time zone not null,
    updated_at timestamp with time zone not null,
    constraint fk_session_comments_session foreign key (session_id) references poop_sessions (id),
    constraint fk_session_comments_user foreign key (user_id) references users (id)
);

create table session_reactions (
    id bigint generated by default as identity primary key,
    session_id bigint not null,
    user_id bigint not null,
    emoji varchar(12) not null,
    created_at timestamp with time zone not null,
    constraint uk_session_reaction_user unique (session_id, user_id),
    constraint fk_session_reactions_session foreign key (session_id) references poop_sessions (id),
    constraint fk_session_reactions_user foreign key (user_id) references users (id)
);

create table session_media (
    id bigint generated by default as identity primary key,
    session_id bigint not null,
    media_url varchar(500) not null,
    media_type varchar(20) not null,
    created_at timestamp with time zone not null,
    constraint fk_session_media_session foreign key (session_id) references poop_sessions (id)
);

create table friendships (
    id bigint generated by default as identity primary key,
    requester_id bigint not null,
    addressee_id bigint not null,
    status varchar(20) not null,
    created_at timestamp with time zone not null,
    updated_at timestamp with time zone not null,
    constraint uk_friendship_pair unique (requester_id, addressee_id),
    constraint fk_friendships_requester foreign key (requester_id) references users (id),
    constraint fk_friendships_addressee foreign key (addressee_id) references users (id)
);

create table devices (
    id bigint generated by default as identity primary key,
    user_id bigint not null,
    fcm_token varchar(512) not null,
    app varchar(20) not null,
    push_enabled boolean not null,
    last_seen_at timestamp with time zone not null,
    created_at timestamp with time zone not null,
    updated_at timestamp with time zone not null,
    constraint uk_devices_fcm_token unique (fcm_token),
    constraint fk_devices_user foreign key (user_id) references users (id)
);

create table activity_logs (
    id bigint generated by default as identity primary key,
    actor_user_id bigint,
    type varchar(40) not null,
    target_type varchar(80) not null,
    target_id bigint,
    details varchar(1000),
    created_at timestamp with time zone not null
);

create index idx_users_username on users (username);
create index idx_poop_sessions_user_start_time on poop_sessions (user_id, start_time desc);
create index idx_poop_sessions_feed on poop_sessions (user_id, privacy, start_time desc);
create index idx_session_comments_session_created_at on session_comments (session_id, created_at);
create index idx_session_reactions_session on session_reactions (session_id);
create index idx_session_media_session on session_media (session_id);
create index idx_friendships_requester_status on friendships (requester_id, status);
create index idx_friendships_addressee_status on friendships (addressee_id, status);
create index idx_devices_user on devices (user_id);
create index idx_activity_logs_actor_created_at on activity_logs (actor_user_id, created_at desc);
